# Skyrim_SpellHotbar2

./: .gitignore  README.md  animation_list.ods
papyrus/: skyrimse.ppj
papyrus/Scripts/Source/: SpellHotbar.psc  SpellHotbarBattleMageInitQuestScript.psc  SpellHotbarInitQuestScript.psc  SpellHotbarInitQuestScript.psc.off  SpellHotbarMCM.psc  SpellHotbarOpenBattleMagePerkTree.psc  SpellHotbarToggleDualCastingEffect.psc
python_scripts/: build_release_package.py  clean_images.py  copy_animations.py  copy_sneak_cast_anims.py  create_anims_folder.py  create_fomod_installer.py  find_animation_mappings.py  stitch_icon_atlas.py
python_scripts/animation_list/: vanilla_move_anims.csv
python_scripts/non_git/: create_skill_potion_icons.py  create_skill_potion_labels.py
python_scripts/spell_lists2/: alteration.csv  conjuration.csv  destruction.csv  illusion.csv  poisons.csv  potions.csv  powers.csv  restoration.csv  shouts.csv  spellhotbar_i4_only.csv
python_scripts/spell_lists2/mods/: abyss.csv  abyssal_tides_magic.csv  abyssal_wind_magic.csv  ancient_blood_magic_2.csv  andromeda.csv  apocalypse_alteration.csv  apocalypse_conjuration.csv  apocalypse_destruction.csv  apocalypse_illusion.csv  apocalypse_restoration.csv  apocalypse_scrolls.csv  arclight.csv  astral_magic_2.csv  constellation_magic.csv  dark_hierophant_magic.csv  desecration.csv  elemental_destruction_magic_redux.csv  elemental_mastery_magic.csv  holy_templar_magic.csv  miracles_of_skyrim.csv  mysticism_alteration.csv  mysticism_conjuration.csv  mysticism_destruction.csv  mysticism_illusion.csv  mysticism_restoration.csv  mysticism_vanilla.csv  obscure_magic.csv  odin_alteration.csv  odin_conjuration.csv  odin_destruction.csv  odin_illusion.csv  odin_restoration.csv  ordinator.csv  path_of_sorcery.csv  sacrosanct.csv  sonic_magic.csv  sperg.csv  stellaris.csv  storm_calling_magic2.csv  thunderchild.csv  (+8 more)
python_scripts/spell_lists2/mods/OFF/: stances.csv
python_scripts/spell_lists2/mods_contributed/: shadow_spell_package.csv  star_wars_spell_pack.csv  star_wars_spell_pack_esl.csv  undead_horse.csv
skse_plugin/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
skse_plugin/CommonLibSSE-NG_fsreg/ports/commonlibsse-ng/0.1.1/: portfile.cmake  vcpkg.json
skse_plugin/CommonLibSSE-NG_fsreg/ports/commonlibsse-ng/0.1.2/: portfile.cmake  vcpkg.json
skse_plugin/CommonLibSSE-NG_fsreg/versions/: baseline.json
skse_plugin/CommonLibSSE-NG_fsreg/versions/c-/: commonlibsse-ng.json
skse_plugin/src/: plugin.cpp
skse_plugin/src/bar/: hotbar.cpp  hotbar.h  hotbars.cpp  hotbars.h  oblivion_bar.cpp  oblivion_bar.h
skse_plugin/src/casts/: casting_controller.cpp  casting_controller.h  spell_proc.cpp  spell_proc.h
skse_plugin/src/events/: animationeventhook.cpp  animationeventhook.h  eventlistener.cpp  eventlistener.h  gameloop_hook.cpp  gameloop_hook.h
skse_plugin/src/game_data/: animation_data_csv_loader.cpp  animation_data_csv_loader.h  csv_loader.h  game_data.cpp  game_data.h  keynames_csv_loader.cpp  keynames_csv_loader.h  localization.cpp  localization.h  spell_cast_data.cpp  spell_cast_data.h  spell_casteffect_csv_loader.cpp  spell_data_csv_loader.cpp  user_custom_entry.cpp  user_custom_entry.h  user_custom_spelldata.cpp  user_custom_spelldata.h  user_data_io.cpp  user_data_io.h
skse_plugin/src/input/: input.cpp  input.h  keybinds.cpp  keybinds.h  keycode_helper.h  modes.cpp  modes.h
skse_plugin/src/papyrus_extensions/: papyrus_functions.cpp
skse_plugin/src/rendering/: advanced_bind_menu.cpp  advanced_bind_menu.h  bar_dragging_config_window.cpp  bar_dragging_config_window.h  gui_tab_button.cpp  gui_tab_button.h  icon_edit_dialog.cpp  icon_edit_dialog.h  potion_editor.cpp  potion_editor.h  render_manager.cpp  render_manager.h  spell_edit_dialog.cpp  spell_edit_dialog.h  spell_editor.cpp  spell_editor.h  texture_buttons_loader.cpp  texture_buttons_loader.h  texture_csv_loader.cpp  texture_csv_loader.h  texture_loader.cpp  texture_loader.h
skse_plugin/src/storage/: storage.cpp  storage.h  user_data_io.cpp  user_data_io.h
